--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,15 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 
-
+/* custom css here */
 html,
 body,
 #__next {
-  height: 100%;
-  width: 100%;
-  display: flex;
+  height: 100vh;
+  width: 100vw;
+  font-family: "Inter", sans-serif;
 }
 
-/* custom css here */
+.font__poppins {
+  font-family: "Poppins", sans-serif;
+}
 
 @import "tailwindcss/utilities";
