Add custom background

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,4 +17,21 @@ body,
   font-family: "Poppins", sans-serif;
 }
 
+.bg__light {
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url(https://images.unsplash.com/photo-1574169208507-84376144848b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=879&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg__dark {
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
+    url(https://images.unsplash.com/photo-1574169208507-84376144848b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=879&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 @import "tailwindcss/utilities";
